# adgen-service

./: .gitignore  INSTALL.md  README.md  adgen.db  docker-compose.yml  ecosystem.config.js  nohup.out  pyproject.toml  query_memory.py  requirements.txt
adgen_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: alembic.ini  init_db.py
backend/alembic/: env.py
backend/alembic/versions/: 4a745f556c76_sync_from_db_metadata.py  9b6c186a9215_soft_delete_support.py  9fa13cef666a_soft_delete.py  e779a5ca17e0_add_bgm_prompt_to_ad_requests.py  efb3452565c5_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: ads.py  audio.py  auth.py  diffusion.py  gpt.py  history.py  segmentation_test.py  text.py  weather.py  whisper.py
backend/app/core/: database.py  diffusion_presets.py  minio_client.py  models.py  schemas.py
backend/app/services/: audio_service.py  auth_service.py  base64_encoder.py  diffusion_service.py  gpt_service.py  media_service.py  memory_service.py  minio_service.py  segmentation.py  text_service.py  weather_service.py  whisper_service.py
backend_backup/app_backup/: main.py
backend_backup/app_backup/api/routes/: weather.py
backend_backup/app_backup/services/: diffusion_service.py  gpt_service.py  whisper_service.py
backend_backup2/: .gitignore
backend_backup2/app/: env_loader.py
backend_backup2/app/core/: schemas.py
backend_backup2/app/services/: diffusion_service.py  whisper_service.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  authApi.ts  generate.ts  history.ts  http.ts  index.ts  whisper.ts
frontend/src/components/auth/: AutForm.tsx
frontend/src/components/common/: AlertModal.tsx  Button.tsx  ColorSelector.tsx  ConfirmModal.tsx  FloatingButton.tsx  FloatingHubButton.tsx  InstallPwaButton.tsx  PageTitle.tsx  ResultModal.tsx  ShareImageButton.tsx  SkeletonBubble.tsx  SkeletonLoader.tsx  TextInput.tsx  TimePicker.tsx  Title.tsx  Toast.tsx
frontend/src/components/header/: AppHeader.tsx  AuthHeader.tsx
frontend/src/components/history/: HistoryGroupSkeleton.tsx  HistoryItem.tsx  HistoryItemSkeleton.tsx  HistoryModal.tsx
frontend/src/components/layout/: AuthLayout.tsx  MainLayout.tsx
frontend/src/components/myPage/: HourRow.tsx  MenuTagEditor.tsx  ProfileRow.tsx
frontend/src/components/voice/: BgmSelectBubble.tsx  CaptionEditor.tsx  ChatBubbleList.tsx  ImageGuideBubble.tsx  ImageModeSelectorBubble.tsx  VoiceRecorder.tsx
frontend/src/constants/: chat.ts
frontend/src/context/: AuthContext.tsx  ChatContext.tsx
frontend/src/hooks/: useCaptionEditor.ts  useDotsAnimation.ts  useGPTGenerate.ts  useImageFlow.ts  useToast.ts  useVoiceChat.ts  useWhisper.ts
frontend/src/pages/: NotFound.tsx
frontend/src/router/: PrivateRoute.tsx
frontend/src/styles/: global.css  tailwind.css
frontend/src/utils/: auth.ts  chatFormatter.ts  files.ts  guestSession.ts  resizeImage.ts  validators.ts
k6/: k6_test.js
nginx/: nginx.conf
notebooks/: 0_setup_environment.ipynb  inbeom_test.ipynb
(+7 files in other folders)
